--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "formik": "^1.5.1",
     "react": "16.6.3",
     "react-native": "0.58.4",
+    "react-native-elements": "^1.0.0",
     "react-native-gesture-handler": "^1.0.15",
-    "react-navigation": "^3.3.0"
+    "react-native-vector-icons": "^6.3.0",
+    "react-navigation": "^3.3.0",
+    "yup": "^0.26.10"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
