--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "formik": "^1.5.1",
+    "prop-types": "^15.7.2",
     "react": "16.6.3",
     "react-native": "0.58.4",
     "react-native-elements": "^1.0.0",
     "react-native-gesture-handler": "^1.0.15",
+    "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.0",
     "yup": "^0.26.10"
